# zaber-examples

./: .editorconfig  .gitignore  .gitmodules  .markdownlint.jsonc  LICENSE  README.md  pyrightconfig.json
.github/workflows/: check_examples.yml
docs/: CONTRIBUTING.md  article_yml.md  cpp.md  csharp.md  directory-structure.md  example-subdirectory-naming.md  java.md  matlab.md  pull-requests.md  python-virtual-environment.md  python.md  readme-guidelines.md  swift.md  typescript.md  virtual-environment.md
docs/archive/: python-old.md  python-virtual-environment.md
examples/_template/: README.md  article.yml.template
examples/_template/python_pdm/: pyproject.toml
examples/_template/python_uv/: main.py  pyproject.toml
examples/calibration_2d/: Pipfile  README.md  article.yml  calibrate.py  calibration.py  calibration_map.md  interactive.py
examples/gui_pyqt6/: .pylintrc  README.md  UI_py_convert.bat  article.yml  pyproject.toml  ui.py
examples/gui_pyqt6/src/gui_pyqt6/: __init__.py  main.py  ui.py
examples/gui_raspberrypi_touch/: Pipfile  README.md  article.yml  main.py  mypy.ini  tasks.py
examples/gui_swift_ui/: README.md  article.yml
examples/gui_textual/: Pipfile  README.md  article.yml  tui.py
examples/hid_joystick/: README.md  article.yml
examples/labview_calling_zml/: README.md  article.yml
examples/microplate_scanning_basic/: Pipfile  README.md  article.yml
examples/microscope_autofocus/: Pipfile  README.md  article.yml  autofocus.py  pyproject.toml
examples/microscope_filter_cube/: README.md  article.yml
examples/microscope_focus_map/: Pipfile  article.yml  focus_map.py  least_square_interpolation.md
examples/microscope_high_throughput_scanning/: Pipfile  README.md  article.yml  config.py  microscope_hts.py  utils.py
examples/microscope_illuminator/: Pipfile  README.md  article.yml  illuminator.py
examples/microscope_ome_tiff_generation/: README.md  article.yml  main.py  ome_tiff.py  pyproject.toml
examples/microscope_tiling_basler_camera/: README.md  article.yml  pyproject.toml
examples/microscope_well_plate_loader/: README.md  article.yml  pyproject.toml
examples/microscope_well_plate_loader/src/plateloadingdemo/: __init__.py  positions.py  settings.py  stacker.py  stream_setup.py  utilities.py  well_plates.py
examples/motion_input_shaping/: Pipfile  README.md  article.yml  damped_vibration.py  measure_vibration_demo.py  plant.py  pyproject.toml  shaped_axis.py  shaped_axis_stream.py  shaping_comparison_demo.py  shaping_demo.py  step_response_data.py  zero_vibration_shaper.py  zero_vibration_stream_generator.py
examples/motion_load_cell/: .gitlab-ci.yml  README.md  article.yml  pyproject.toml  zaber-pyright.toml  zaber-ruff.toml
examples/motion_load_cell/src/force_mode_demo/: __init__.py  config.py  main.py  models.py  plot.py
examples/motion_load_cell/src/force_mode_demo/compression/: __init__.py  compression_logic.py  compression_run.py
examples/motion_load_cell/src/force_mode_demo/mapping/: __init__.py  mapping_logic.py  mapping_run.py
examples/motion_load_cell/src/force_mode_demo/tactile/: __init__.py  tactile_logic.py  tactile_run.py
examples/motion_load_cell/tests/: __init__.py  test_example.py
examples/motion_pvt_sequence_generation/: Pipfile  README.md  article.yml  generate_pvt_sequence.py  mypy.ini  pvt.py  sequence_generators.py  visualization.py
examples/motion_tracking/: README.md  article.yml  pyproject.toml
examples/motion_tracking/src/motion_tracking/: __init__.py  main.py
examples/self_test_direct_encoder_stage/: README.md  article.yml  pyproject.toml
examples/self_test_direct_encoder_stage/src/self_test_direct_encoder_stage/: accuracy.py  settling_time.py
examples/util_com_port_scan/: README.md  article.yml  com_port_scan.py  pyproject.toml
examples/util_com_port_scan/src/util_com_port_scan/: main.py
examples/util_matlab_compiler/: .gitignore  README.md  article.yml  build_standalone_app.m
examples/util_pyinstaller/: .gitignore  README.md  article.yml  build.bat  build.sh  pyproject.toml  requirements.txt  run.bat
examples/util_pyinstaller/src/util_pyinstaller/: main.py
src/_template/: README.md  article.yml
src/async/: README.md  article.yml
src/calibration_2d/: README.md  article.yml  calibrate.py  calibration.py  calibration_map.md
src/gantry_calibration/: README.md  calibrate.py  calibration.py  calibration_map.md
src/gui_pyqt6/: README.md  article.yml  requirements.txt  stage_pos_gui.py  style.css  ui.py
src/gui_raspberrypi_touch/: Pipfile  README.md  index.html  mypy.ini
src/gui_textual/: Pipfile  README.md  article.yml  connection_services.py  tui.css
src/hid_joystick/: README.md  article.yml
src/labview_calling_zml/: README.md  article.yml
src/microplate_scanning_basic/: Pipfile  README.md
src/microscope_autofocus/: Pipfile  README.md  article.yml  autofocus.py
src/microscope_filter_cube/: README.md  article.yml  filtercube.py
src/microscope_focus_map/: README.md  focus_map.py  least_square_interpolation.md
src/microscope_high_throughput_scanning/: Pipfile  README.md  microscope_hts.py
src/microscope_illuminator/: Pipfile  README.md  illuminator.py
src/microscope_tiling_basler_camera/: README.md  article.yml  pyproject.toml
src/microscope_tiling_basler_camera/src/microscope_tiling_basler_camera/: __init__.py  basler_camera_wrapper.py  main.py
src/motion_input_shaping/: Pipfile  README.md  input_shaper_types.md  measure_vibration_demo.py  measure_vibration_test.py  plant.py  pyproject.toml  shaped_axis.py  shaped_axis_stream.py  shaped_lockstep.py  shaper_config.py  shaping_comparison_demo.py  shaping_comparison_test.py  shaping_demo.py  step_response_data.py  (+2 more)
tools/check_examples/: .markdownlint.jsonc  Pipfile  README.md  check.py  check.sh  check_basic.py  check_python.py  common.py  ignore.txt  markdown_links.py  package-lock.json  package.json  pymarkdownlnt.toml  pyproject.toml
tools/check_examples/src/check_examples/: __init__.py  check.py  check_basic.py  check_python.py  common.py  markdown_links.py  terminal_utils.py
(+89 files in other folders)
