[project]
name = "PlateLoadingDemo"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Zaber Technologies Inc.", email = "contact@zaber.com"},
]
dependencies = ["zaber-motion>=7.4.1", "mecademicpy>=2.2.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
demo = {call = "src.plateloadingdemo.stacker:main"}
stream = {call = "src.plateloadingdemo.stream_setup:main"}
format = { cmd = "ruff format" }
ruff = { cmd = "ruff check --fix" }
pyright = { cmd = "pyright src" }
lint = { composite = ["format", "ruff", "pyright"] }

[dependency-groups]
dev = [
    "mypy>=1.9.0",
    "pylint>=3.1.0",
    "black>=24.4.0",
    "pydocstyle>=6.3.0",
]

[tool.ruff]
line-length = 120

[tool.pylint]
disable = [
    "invalid-name", 
    "too-many-instance-attributes",
    "line-too-long",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-many-branches", 
    "too-many-statements"
]

[tool.pydocstyle]
ignore = [
    "D100", # Missing docstring in public module
    "D103", # Missing docstring in public function
    "D401", # First line should be in imperative mood 
    "D203", # 1 blank line required before class docstring
    "D404" #First word of the docstring should not be `This`
    ]

[tool.mypy]
disable_error_code = ["import-not-found", "import-untyped", "call-overload"]
