[project]
name = "force-mode-demo"
version = "0.1.0"
description = "Integrating an external loadcell with any zaber stage and controlling it using the AI port on X-MCC controller"
readme = "README.md"
authors = [
    { name = "Xi Wen Goh", email = "xiwen.goh@zaber.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "zaber-motion>=9.1.0",
]

[project.scripts]
force-mode-demo = "force_mode_demo.main:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "ruff~=0.14.0",
]

[tool.pyright]
extends = "../../tools/tooling_config/zaber-pyright.toml"
exclude = [".venv", ".uv-cache", "**/node_modules", '**/__pycache__', ".*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# Report warnings as errors
filterwarnings = ["error"]

[tool.ruff]
extend = "../../tools/tooling_config/zaber-ruff.toml"
exclude = [".venv", ".uv-cache"]
