[project]
name = "util_com_port_scan"
version = "0.1.0"
description = "Zaber Examples -- COM Port Scan"
authors = [
    {name = "Nathan Paolini", email = "testing@zaber.com"},
]
dependencies = [
    "zaber-motion==3.3.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
example = {call = "src.util_com_port_scan.main:main"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.9.0",
    "pylint>=3.1.0",
    "black>=24.4.0",
    "pydocstyle>=6.3.0",
]

[tool.pylint."messages control"]
disable = ["no-member", "too-many-arguments", "too-many-locals"]