[project]
name = "util_pyinstaller"
version = "0.1.0"
description = "Zaber Examples -- Packaging ZML with PyInstaller"
authors = [
    {name = "Martin Zak", email = "software@zaber.com"},
]
dependencies = [
    "pyinstaller==6.5.0",
    "zaber-motion==7.2.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
example = {call = "src.util_pyinstaller.main:main"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.9.0",
    "pylint>=3.1.0",
    "black>=24.4.0",
    "pydocstyle>=6.3.0",
]

[tool.pylint."messages control"]
disable = ["no-member", "too-many-arguments", "too-many-locals"]
