[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[project]
name = "check_examples"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Andrew Bruce Lau", email = "andrew@zaber.com"},
]
dependencies = [
    "docopt-ng>=0.9.0",
    "pyyaml>=6.0.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
check = "check_examples.check:main"

[dependency-groups]
dev = [
    "ruff~=0.14.0",
    "pyright>=1.1.0",
    "types-PyYAML>=6.0.12.20250402",
]

[tool.ruff]
extend = "../tooling_config/zaber-ruff.toml"

[tool.pyright]
extends = "../tooling_config/zaber-pyright.toml"
