[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[project]
name = "check_examples"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Andrew Bruce Lau", email = "andrew@zaber.com"},
]
dependencies = [
    "docopt-ng>=0.9.0",
    "oslex2>=1.0.0",
    "pyyaml>=6.0.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
check = "check_examples.check:main"

[dependency-groups]
dev = [
    "ruff~=0.14.0",
    "pyright>=1.1.0",
    "types-PyYAML>=6.0.12.20250402",
    "mypy>=2.2.0",
    "black>=26.5.1",
    "pylint>=4.0.6",
    "pydocstyle>=6.3.0",
]

[tool.ruff]
extend = "../tooling_config/zaber-ruff.toml"

[tool.ruff.lint]
ignore = [
    "S101",   # allow assert
    "TRY003", # allow error messages outside exception class
    "C901",   # allow complex functions
    "ERA001", # allow commented-out code
    "S602",   # allow shell=True (intentional for cross-platform support)
]

[tool.pyright]
extends = "../tooling_config/zaber-pyright.toml"
reportMissingTypeStubs = "none"

[tool.mypy]
disable_error_code = "import-untyped"

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.pylint.messages_control]
disable = ["import-error"]
